{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 88,
  "lineage": "ca29a0aa-5c77-8070-bd8b-e119ad34b07a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01af1a958901514b2",
            "arn": "arn:aws:ec2:ap-south-1:787755074909:elastic-ip/eipalloc-01af1a958901514b2",
            "domain": "vpc",
            "id": "eipalloc-01af1a958901514b2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-79-166.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.79.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nexus-dev-nat-eip-0"
            },
            "tags_all": {
              "Name": "nexus-dev-nat-eip-0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073fa4b03155e0b0f",
            "arn": "arn:aws:ec2:ap-south-1:787755074909:elastic-ip/eipalloc-073fa4b03155e0b0f",
            "domain": "vpc",
            "id": "eipalloc-073fa4b03155e0b0f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-188-111.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.188.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nexus-dev-nat-eip-1"
            },
            "tags_all": {
              "Name": "nexus-dev-nat-eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:internet-gateway/igw-035874a99ddd1614b",
            "id": "igw-035874a99ddd1614b",
            "owner_id": "787755074909",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-igw",
              "Project": "nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-igw",
              "Project": "nexus"
            },
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01af1a958901514b2",
            "association_id": "eipassoc-07d03a6e9661354e5",
            "connectivity_type": "public",
            "id": "nat-0872c22a73a9e0d2f",
            "network_interface_id": "eni-08636e75c22c057bb",
            "private_ip": "10.0.0.117",
            "public_ip": "3.7.79.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0803300a68a3abead",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-nat-0",
              "Project": "nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-nat-0",
              "Project": "nexus"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073fa4b03155e0b0f",
            "association_id": "eipassoc-0bc2384c749a22aa6",
            "connectivity_type": "public",
            "id": "nat-0db232bb50c06f03c",
            "network_interface_id": "eni-08913dd34a3d0e9d6",
            "private_ip": "10.0.1.84",
            "public_ip": "3.109.188.111",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7409e9fe9343c35",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-nat-1",
              "Project": "nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-nat-1",
              "Project": "nexus"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:route-table/rtb-0300a1107ea43f8bf",
            "id": "rtb-0300a1107ea43f8bf",
            "owner_id": "787755074909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0872c22a73a9e0d2f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nexus-dev-private-rt-0"
            },
            "tags_all": {
              "Name": "nexus-dev-private-rt-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:route-table/rtb-07cbf491c7c4afb6a",
            "id": "rtb-07cbf491c7c4afb6a",
            "owner_id": "787755074909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0db232bb50c06f03c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nexus-dev-private-rt-1"
            },
            "tags_all": {
              "Name": "nexus-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:route-table/rtb-07c050ff171203c43",
            "id": "rtb-07c050ff171203c43",
            "owner_id": "787755074909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035874a99ddd1614b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nexus-dev-public-rt"
            },
            "tags_all": {
              "Name": "nexus-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e966ec4ad95bc3de",
            "route_table_id": "rtb-0300a1107ea43f8bf",
            "subnet_id": "subnet-08e06a21f69380265"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06822e4d2b8735c1e",
            "route_table_id": "rtb-07cbf491c7c4afb6a",
            "subnet_id": "subnet-0f41dd2f509609167"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc5beb6c053bdc5b",
            "route_table_id": "rtb-07c050ff171203c43",
            "subnet_id": "subnet-0803300a68a3abead"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09595494e32921474",
            "route_table_id": "rtb-07c050ff171203c43",
            "subnet_id": "subnet-0a7409e9fe9343c35"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:subnet/subnet-08e06a21f69380265",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e06a21f69380265",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787755074909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-private-0",
              "Project": "nexus",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-private-0",
              "Project": "nexus",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:subnet/subnet-0f41dd2f509609167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f41dd2f509609167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "787755074909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-private-1",
              "Project": "nexus",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-private-1",
              "Project": "nexus",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:subnet/subnet-0803300a68a3abead",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0803300a68a3abead",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787755074909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-public-0",
              "Project": "nexus",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-public-0",
              "Project": "nexus",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:subnet/subnet-0a7409e9fe9343c35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7409e9fe9343c35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787755074909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-public-1",
              "Project": "nexus",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-public-1",
              "Project": "nexus",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f4e9fdc38f8f4ba5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:787755074909:vpc/vpc-0f4e9fdc38f8f4ba5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0847a21f7d5aa225a",
            "default_route_table_id": "rtb-02d7241f7c021ef58",
            "default_security_group_id": "sg-08f607e5e7347aeaa",
            "dhcp_options_id": "dopt-0ddb13059a2e7d520",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4e9fdc38f8f4ba5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d7241f7c021ef58",
            "owner_id": "787755074909",
            "tags": {
              "Environment": "dev",
              "Name": "nexus-dev-vpc",
              "Project": "nexus"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nexus-dev-vpc",
              "Project": "nexus"
            }
          }
        }
      ]
    }
  ]
}